--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>HTML Video Player</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
@@ -19,6 +20,7 @@
        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
        <button data-skip="-10" class="player__button">« 10s</button>
        <button data-skip="25" class="player__button">25s »</button>
+       <button class="player__button fullScreen" title="Full Screen"><i class="icon-fullscreen"></i></button>
      </div>
    </div>
 
